# mech-client

./: .example.env  .gitignore  .spelling  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_RESTRUCTURE_SUMMARY.md  CONTRIBUTING.md  ENV_VAR_ANALYSIS.md  ERROR_HANDLING_IMPROVEMENTS.md  HISTORY.md  ISSUES_AND_PLAN.md  LINTER_FINAL_STATUS.md  LINTER_TEST_SUMMARY.md  MANIFEST.in  MIGRATION.md  MIGRATION_GUIDE.md  Makefile  OLD_CODE_REMOVAL_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  README.md  REFACTOR_PLAN.md  SECURITY.md  TESTING.md  TEST_COVERAGE_IMPROVEMENTS.md  UNUSED_MECHCONFIG_FIELDS.md  UPGRADE.md  mkdocs.yml  pyproject.toml  pytest.ini  result.json  tox.ini
.github/workflows/: release.yml  workflow.yml
config/: mech_client.json  mech_client_base.json  mech_client_gnosis.json  mech_client_polygon.json
docs/: AGENT_MODE_RPC_CONFIGURATION_ISSUE.md  ARCHITECTURE.md  COMMANDS.md  TESTING.md  TOKEN_APPROVAL_AGENT_MODE_ISSUE.md  coverage-gaps.md  index.md  manual-testing-guide.md
docs/imgs/: index.md
mech_client/: __init__.py  acn.py  cli.py  contract_addresses.py  deliver.py  delivery.py  deposits.py  fetch_ipfs_hash.py  interact.py  marketplace_interact.py  mech_marketplace_subgraph.py  mech_marketplace_tool_management.py  mech_tool_management.py  prompt_to_ipfs.py  push_to_ipfs.py  safe.py  subgraph.py  to_png.py  wss.py
mech_client/abis/: AgentMech.json  AgentRegistry.json  AgreementStoreManager.base.json  AgreementStoreManager.gnosis.json  AgreementStoreManager.polygon.json  BalanceTrackerFixedPriceNative.json  BalanceTrackerFixedPriceToken.json  BalanceTrackerNvmSubscriptionNative.json  BalanceTrackerNvmSubscriptionToken.json  ComplementaryServiceMetadata.json  DIDRegistry.base.json  DIDRegistry.gnosis.json  DIDRegistry.polygon.json  EscrowPaymentCondition.base.json  EscrowPaymentCondition.gnosis.json  EscrowPaymentCondition.polygon.json  GnosisSafe_v1.3.0.json  IERC1155.json  IMech.json  LockPaymentCondition.base.json  LockPaymentCondition.gnosis.json  LockPaymentCondition.polygon.json  MechMarketplace.json  NFTSalesTemplate.base.json  NFTSalesTemplate.gnosis.json  NFTSalesTemplate.polygon.json  NeverminedConfig.base.json  NeverminedConfig.gnosis.json  NeverminedConfig.polygon.json  SubscriptionNFT.base.json  SubscriptionNFT.gnosis.json  SubscriptionNFT.polygon.json  SubscriptionProvider.base.json  SubscriptionProvider.gnosis.json  SubscriptionProvider.polygon.json  SubscriptionToken.base.json  SubscriptionToken.polygon.json  TransferNFTCondition.Gnosis.json  TransferNFTCondition.base.json  TransferNFTCondition.polygon.json
mech_client/cli/: __init__.py  common.py  main.py  validators.py
mech_client/cli/commands/: __init__.py  deposit_cmd.py  ipfs_cmd.py  mech_cmd.py  request_cmd.py  setup_cmd.py  subscription_cmd.py  tool_cmd.py
mech_client/config/: mech_client_gnosis.json  mech_client_optimism.json
mech_client/configs/: mechs.json
mech_client/domain/: __init__.py
mech_client/domain/delivery/: __init__.py  base.py  constants.py  offchain_watcher.py  onchain_watcher.py
mech_client/domain/execution/: __init__.py  agent_executor.py  base.py  client_executor.py  factory.py
mech_client/domain/payment/: __init__.py  base.py  factory.py  native.py  nvm.py  token.py
mech_client/domain/signing/: __init__.py  base.py  local.py
mech_client/domain/subscription/: __init__.py  agreement.py  balance_checker.py  fulfillment.py  manager.py
mech_client/domain/tools/: __init__.py  manager.py  models.py
mech_client/helpers/: __init__.py
mech_client/infrastructure/: __init__.py
mech_client/infrastructure/blockchain/: __init__.py  abi_loader.py  receipt_waiter.py  safe_client.py
mech_client/infrastructure/config/: __init__.py  chain_config.py  constants.py  contract_addresses.py  environment.py  loader.py  payment_config.py
mech_client/infrastructure/ipfs/: __init__.py  client.py  converters.py  local_cid.py  metadata.py
mech_client/infrastructure/nvm/: __init__.py  config.py
mech_client/infrastructure/operate/: __init__.py  config_loader.py  key_manager.py  manager.py
mech_client/infrastructure/subgraph/: __init__.py  client.py  queries.py
mech_client/nvm_subscription/: __init__.py  manager.py
mech_client/nvm_subscription/contracts/: agreement_manager.py  base_contract.py  did_registry.py  escrow_payment.py  lock_payment.py  nevermined_config.py  nft.py  nft_sales.py  subscription_provider.py  token.py  transfer_nft.py
mech_client/services/: __init__.py  base_service.py  deposit_service.py  marketplace_service.py  setup_service.py  subscription_service.py  tool_service.py
mech_client/utils/: __init__.py  constants.py  logger.py  validators.py
mech_client/utils/errors/: __init__.py  exceptions.py  handlers.py  messages.py
scripts/: __init__.py  benchmark.sh  deposit_native.py  deposit_token.py  nvm_subscribe.py  setup.py  utils.py  whitelist.py  withdraw_native.py  withdraw_token.py
scripts/nvm_subscription/: manager.py
scripts/nvm_subscription/contracts/: agreement_manager.py  base_contract.py  did_registry.py  escrow_payment.py  lock_payment.py  nevermined_config.py  nft.py  nft_sales.py  subscription_provider.py  token.py  transfer_nft.py
scripts/nvm_subscription/envs/: base.env  gnosis.env  polygon.env
scripts/nvm_subscription/resources/: networks.json
stress_tests/: README.md  locustfile.py
stress_tests/helpers/: nonce_manager.py  query_generation.py
tests/: README.md  __init__.py  batch_stress_test.py  conftest.py  decode_raw.py  latency_test.py  locustfile.py  metadata.json  stress_test.py  test_e2e_request_deliver.py
tests/helpers/: marketplace_helpers.py  nonce_manager.py  query_generation.py
tests/unit/: __init__.py  helpers.py
tests/unit/cli/: __init__.py  test_common.py  test_deposit_cmd.py  test_ipfs_cmd.py  test_main.py  test_mech_cmd.py  test_request_cmd.py  test_setup_cmd.py  test_subscription_cmd.py  test_tool_cmd.py  test_validators.py
tests/unit/domain/: __init__.py  test_delivery_watchers.py  test_execution_strategies.py  (+6 more)
(+43 files in other folders)
