[project]
name = "mech-client"
version = "v0.20.1"
description = "Basic client to interact with a mech"
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "gql>=3.4.1",
    "asn1crypto>=1.4.0,<1.5.0",
    "websocket-client>=0.32.0,<1",
    "tabulate>=0.9.0,<0.10",
    "setuptools>=78.1.1,<82",
    "olas-operate-middleware==0.15.2",
    "safe-eth-py>=7.18.0,<8",
    "click==8.1.8",
    "jsonschema>=4.20.0,<4.24.0",
    "pydantic>=2.12.0",
    "open-aea-helpers==0.21.19",
    "pip>=24.0",
]

[project.scripts]
mechx = "mech_client.cli.main:cli"

[dependency-groups]
dev = [
    "tomte[tox]==0.6.5",
    "pytest-asyncio==1.3.0",
    "pytest-cov>=7.0.0,<8",
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.0,<10",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = [
    "mech_client",
    "scripts",
]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
